Bug 48747 - regression [bisected]: display corruption in google earth/glxgears using git r600g on RS780M
Summary: regression [bisected]: display corruption in google earth/glxgears using git ...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r600 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-15 19:02 UTC by Jos van Wolput
Modified: 2012-05-16 21:48 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
corrupted glxgears (88.34 KB, image/png)
2012-04-15 19:02 UTC, Jos van Wolput
Details
Xorg.log (72.41 KB, text/plain)
2012-04-16 03:23 UTC, Jos van Wolput
Details
possible fix (1.47 KB, patch)
2012-04-16 07:11 UTC, Alex Deucher
Details | Splinter Review

Description Jos van Wolput 2012-04-15 19:02:06 UTC
Created attachment 60043 [details]
corrupted glxgears

When using the r600g driver from git mesa (instead of the ati-driver) I get corrupted 3D pictures as shown by the attachment.
No such issue using r600g from mesa-8.0.2.
All 3D demos are affected as well as google earth and GLC_player 3D apps.

Result of git bisect: 
mesa-c0c979eebc076b95cc8d18a013ce2968fe6311ad is the first bad commit,
committer: Jerome Glisse <jglisse@redhat.com>
date: 2012-02-06 23:36:37 (GMT)
title: 'r600g: add support for common surface allocator for tiling v13'

My hardware and system:
ATI Radeon HD3200 RS780M/RS780MN
Debian Sid with the following packages updated:
Linux Kernel~3.3.0-1.dmz.1-liquorix-amd64
Latest git version of libdrm, libX11, libxcb, libXi, mesa and xserver.
Comment 1 Michel Dänzer 2012-04-16 02:40:57 UTC
Please attach the Xorg.0.log file.
Comment 2 Jos van Wolput 2012-04-16 03:23:56 UTC
Created attachment 60053 [details]
Xorg.log
Comment 3 Alex Deucher 2012-04-16 07:11:04 UTC
Created attachment 60065 [details] [review]
possible fix

Does this kernel patch help?
Comment 4 Jerome Glisse 2012-04-16 07:27:12 UTC
Does it works with ati driver from git ? gallium st/xorg is not really supported
Comment 5 Jos van Wolput 2012-04-16 19:41:32 UTC
(In reply to comment #4)
> Does it works with ati driver from git ? gallium st/xorg is not really
> supported

Yes, it works without problems with xf86-video-ati driver from git.
Comment 6 Jos van Wolput 2012-04-16 21:36:20 UTC
(In reply to comment #3)

> Does this kernel patch help?

I am sorry I can't patch my kernel since I use a precompiled one.
Comment 7 Michel Dänzer 2012-04-17 00:16:39 UTC
(In reply to comment #6)
> I am sorry I can't patch my kernel since I use a precompiled one.

It's not hard to build your own Debian kernel with a patch. It'll be a skill very useful to you for testing bug fixes.


(In reply to comment #5)
> Yes, it works without problems with xf86-video-ati driver from git.

Even with Option "ColorTiling2D"?
Comment 8 Jos van Wolput 2012-04-17 04:42:21 UTC
(In reply to comment #7)

> Even with Option "ColorTiling2D"?

I am not quite sure if ColorTiling2D is really enabled since I am running
kernel 3.3, I understand you need kernel 3.4 to enable 2D tiling properly.

Anyway this is what Xorg.0.log mentions about tiling:
[  2648.738] (**) RADEON(0): Option "ColorTiling2D" "on"
[  2648.739] (II) RADEON(0): KMS Color Tiling: enabled
Comment 9 Michel Dänzer 2012-05-16 09:59:25 UTC
Commit: 11f056a3f0b87e86267efa8b5ac9d36a343c9dc1
Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Wed May 16 17:45:17 2012 +0200

r600g: Set tiling information for BOs being shared.
Comment 10 Jos van Wolput 2012-05-16 21:48:31 UTC
(In reply to comment #9)
> Commit: 11f056a3f0b87e86267efa8b5ac9d36a343c9dc1
> Author: Michel Dänzer <michel.daenzer@amd.com>
> Date:   Wed May 16 17:45:17 2012 +0200
> 
> r600g: Set tiling information for BOs being shared.

Indeed no more display corruption, thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.